--- a/report/sources.bib
+++ b/report/sources.bib
@@ -10,6 +10,26 @@
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
+@article{allyourbase,
+  title={All your base...},
+  author={Johnston, Rich},
+  journal={The Guardian},
+  year={2001},
+  month={February},
+  day={27},
+  url={http://www.guardian.co.uk/technology/2001/feb/28/internetnews.g2}
+}
+
+@article{contagion,
+  title={Infectious disease modeling of social contagion in networks},
+  author={Hill, A.L. and Rand, D.G. and Nowak, M.A. and Christakis, N.A.},
+  journal={PLoS computational biology},
+  volume={6},
+  number={11},
+  pages={e1000968},
+  year={2010},
+  publisher={Public Library of Science}
+}
 
 @article{viral_dynamics,
  author = {Leskovec, Jure and Adamic, Lada A. and Huberman, Bernardo A.},
@@ -29,6 +49,25 @@
  address = {New York, NY, USA},
  keywords = {Viral marketing, e-commerce, long tail, network analysis, recommender systems, word-of-mouth},
 } 
+
+@article{marketing1,
+  title={Using complex systems analysis to advance marketing theory development: Modeling heterogeneity effects on new product growth through stochastic cellular automata},
+  author={Goldenberg, J. and Libai, B. and Muller, E.},
+  journal={Academy of Marketing Science Review},
+  volume={9},
+  number={3},
+  pages={1--18},
+  year={2001}
+}
+
+@inproceedings{marketing2,
+  title={Maximizing the spread of influence through a social network},
+  author={Kempe, D. and Kleinberg, J. and Tardos, {\'E}.},
+  booktitle={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={137--146},
+  year={2003},
+  organization={ACM}
+}
 
 @inproceedings{twitter_trend,
   added-at = {2012-06-17T23:16:06.000+0200},
